Improved FUM parsing. Now it checks it is in a normal range and can solve the obvious cases where the month and day date are inverted/digitation error

--- a/compareAutomaticManual.ipynb
+++ b/compareAutomaticManual.ipynb
@@ -60,17 +60,9 @@
     "nivelN1.index = nivelN1.ID01\n",
     "nivelN1 = nivelN1.loc[~nivelN1.index.duplicated(keep='first')]\n",
     "\n",
-    "automatic = pandas.read_csv('Data/results.csv')\n",
+    "automatic = pandas.read_csv('Data/results1.csv')\n",
     "automatic['VAR_0019'] = automatic['VAR_0019'].map(standardiseVenezuelan)\n",
     "addID01(automatic)\n",
-    "def transformIDGP(s):\n",
-    "    \"\"\"\n",
-    "    Remove 1 to gestas previas\n",
-    "    \"\"\"\n",
-    "    s = re.match('(.*)([0-9][0-9])([0-9])', s)\n",
-    "    return s.group(1) + '%02d' % (int(s.group(2)) -1) + s.group(3)\n",
-    "automatic = automatic[automatic.ID01.map(lambda s: 'X' not in s)]\n",
-    "automatic.ID01 = automatic.ID01.map(transformIDGP)\n",
     "automatic.index = automatic.ID01"
    ]
   },
@@ -123,6 +115,7 @@
    "outputs": [],
    "source": [
     "import datetime\n",
+    "import caseTransformer\n",
     "nivelN1['dayOperation'] = nivelN1.VAR_0183.map(lambda s: datetime.datetime.strptime(s, '%m/%d/%y %H:%M:%S') if s== s else s)\n",
     "automatic['dayOperation'] = automatic.VAR_0183.map(lambda s: datetime.datetime.strptime(s.split()[0], '%Y-%m-%d') if s == s else s)\n",
     "automaticByDay = automatic.groupby('dayOperation')"
@@ -238,6 +231,25 @@
    "outputs": [],
    "source": [
     "nivelN1 = nivelN1.loc[~nivelN1.index.duplicated(keep='first')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datetime.datetime.strptime('02/20/19', '%m/%d/%y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parseDateManual(s):\n",
+    "    datetime.datetime.strftime('%m/%d/%y %H:%M:%S')"
    ]
   },
   {
