--- a/databaseTransformer.ipynb
+++ b/databaseTransformer.ipynb
@@ -378,7 +378,8 @@
     "importlib.reload(caseTransformer.parseMeasurementsByDay)\n",
     "importlib.reload(caseTransformer.parseInterventions)\n",
     "importlib.reload(caseTransformer.parseDiagnosis)\n",
-    "importlib.reload(caseTransformer.parseMedicaments)"
+    "importlib.reload(caseTransformer.parseMedicaments)\n",
+    "importlib.reload(caseTransformer.parseMeasurementsByDay.parsingDatabaseUtils)"
    ]
   },
   {
@@ -396,18 +397,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp(d.epicrisis.RegistroXML)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "for c, d in tqdm.notebook.tqdm(processedDatasets.items()):\n",
-    "    if c in resSIP:\n",
-    "        continue\n",
+    "    #if c in resSIP or c != 'AD324070':\n",
+    "    #    continue\n",
     "    cT = caseTransformer.CaseTransformer(data = d)    \n",
     "    resSIP[c] = cT.processAll()"
    ]
@@ -417,15 +409,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%debug"
+    "resSIP['AD324070']"
    ]
   },
   {
@@ -434,8 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp = parsingDatabaseUtils.prettyPrintXML\n",
-    "pp(list(processedDatasets.values())[500].procedure.XmlDescripcion)"
+    "pp(processedDatasets['AD323556'].epicrisis.RegistroXML)"
    ]
   },
   {
@@ -444,7 +428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = list(processedDatasets.values())[660]"
+    "pp(processedDatasets['AD324518'].getNewbornRegister(0).RegistroXML)"
    ]
   },
   {
@@ -453,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp(data.getNewbornRegister(0).RegistroXML)"
+    "resDF = pandas.DataFrame.from_dict(resSIP, orient = 'index')"
    ]
   },
   {
@@ -462,447 +446,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
-    "def relErrorInLimits(v1, v2, th = .05):\n",
-    "    try:\n",
-    "        v1 = float(v1)\n",
-    "        v2 = float(v2)\n",
-    "        relErr =  2 * math.fabs(v1 - v2)/(v1 + v2)\n",
-    "        return relErr < th\n",
-    "    except:\n",
-    "        return False\n",
-    "def joinDicts(d1, d2):\n",
-    "    d1 = d1.copy()\n",
-    "    d2 = d2.copy()\n",
-    "    for k in d1:\n",
-    "        if k in d2 and d1[k] != d2[k]:\n",
-    "            if relErrorInLimits(d1[k], d2[k]):\n",
-    "                d1[k] = (float(d1[k]) + float(d2[k]))/2\n",
-    "            else:\n",
-    "                d2['error_key_%s' % str(k)] = (True, (d1[k], d2[k]))\n",
-    "    d2.update(d1)\n",
-    "    return d2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dateDifferenceDays(d1, d2):\n",
-    "    p1 = parsingDatabaseUtils.parseDate(d1, ''datetime) if isinstance(d1, str) else d1\n",
-    "    p2 = parsingDatabaseUtils.parseDate(d2, 'datetime') if isinstance(d2, str) else d2\n",
-    "    return (p1 - p2).days\n",
-    "\n",
-    "def egByEcho(date, res):\n",
-    "    bestDiff = 365\n",
-    "    bestEg  = 0\n",
-    "    date =parsingDatabaseUtils.parseDate(date, True)\n",
-    "    for i in range(10):\n",
-    "        if 'echo_%d_eg' % i in res:\n",
-    "            eg = res['echo_%d_eg' % i] \n",
-    "            dateEcho = parsingDatabaseUtils.parseDate(res['echo_%d_date' % i], True)\n",
-    "            \n",
-    "            if np.abs(dateDifferenceDays(date, dateEcho)) < bestDiff:\n",
-    "                bestDiff = np.abs(dateDifferenceDays(date, dateEcho))\n",
-    "                bestEg = float(eg) * 7 + dateDifferenceDays(date, dateEcho)\n",
-    "        else:\n",
-    "            break\n",
-    "    return bestEg\n",
-    " \n",
-    "def dateToGestationDays(date, res):\n",
-    "    \"\"\"\n",
-    "    Checks wether the event is before or after labour.\n",
-    "    \n",
-    "    - If it is before, return the number of gestation days\n",
-    "    - Otherwise, the time before.\n",
-    "    \"\"\"\n",
-    "    #If FUM\n",
-    "    \n",
-    "    #Otherwise, use the closest echo\n",
-    "    if True:\n",
-    "        pass\n",
-    "    else:\n",
-    "        days = egByEcho(date, res)\n",
-    "    return days"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for c, p in tqdm.notebook.tqdm(processedDatasets.items()):\n",
-    "    if p.epicrisis is not None and len(p.registrosRecienNacido) == 0:\n",
-    "        print(c)\n",
-    "        \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "registros.FechaAsignacionRegistro"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import parseEpicrisis\n",
-    "importlib.reload(parsingDatabaseUtils)\n",
-    "importlib.reload(parseEpicrisis)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "resSIP = {}\n",
-    "breakLoop = False\n",
-    "count = 0\n",
-    "for c, p in tqdm.notebook.tqdm(processedDatasets.items()):\n",
-    "    if len(p.registrosRecienNacido) > 1:\n",
-    "        print(c, 'Warning! I still cannot handle twins')\n",
-    "        continue\n",
-    "    resSIP[c] = parseEpicrisis.getMotherData(p)\n",
-    "    resSIP[c] = joinDicts(resSIP[c], parseEpicrisis.getDataFromHospitalAdmision(p))\n",
-    "    resSIP[c] = joinDicts(resSIP[c], parsingDatabaseUtils.getInformationFromProcedureDescription(p))\n",
-    "    for k in p.registrosRecienNacido:\n",
-    "        resSIP[c] = joinDicts(resSIP[c], parsingDatabaseUtils.getNewbornData(p, k))\n",
-    "    if len(p.registrosRecienNacido) == 1:\n",
-    "        resSIP[c]['VAR_0286'] = '0'\n",
-    "        resSIP[c]['VAR_0285'] = 'A'\n",
-    "df = pandas.DataFrame.from_dict(resSIP, orient = 'index')\n",
-    "#l = list(df[(df.VAR_0294 != df.VAR_0294) & (df.VAR_0293 != df.VAR_0293)].index)\n",
-    "#print(len(l))\n",
-    "print(count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "importlib.reload(parseEpicrisis)\n",
-    "antececedentesText = parsingDatabaseUtils.findInXML('AntecedentesHTML', processedDatasets[k].epicrisis.RegistroXML)\n",
-    "\n",
-    "parseEpicrisis.parseEchographies(antececedentesText, cleanText = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import datetime\n",
-    "def toInt(s, d = 1):\n",
-    "    try:\n",
-    "        s = str(int(s))\n",
-    "        return addZeros(s, d)\n",
-    "    except:\n",
-    "        return \"X\"\n",
-    "def addZeros(s, d):\n",
-    "    s = str(s)\n",
-    "    return '0' * (d - len(str(s))) + s "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "preanestesico, without = 0,0\n",
-    "anesthesia = []\n",
-    "registrosPreanestesico = registros.loc[registros.CodigoRegistro ==20]\n",
-    "for c, p in processedDatasets.items():\n",
-    "    if p.ingreso is None or True:\n",
-    "        hClinica = p.epicrisis.NumeroHistoria\n",
-    "        if len(registrosPreanestesico.loc[registrosPreanestesico.NumeroHistoria == hClinica]):\n",
-    "            preanestesico += 1\n",
-    "            anesthesia.append(registrosPreanestesico.loc[registrosPreanestesico.NumeroHistoria == hClinica].iloc[0])\n",
-    "        else:\n",
-    "            without += 1\n",
-    "preanestesico, without"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "keys = list(processedDatasets.keys())\n",
-    "parsingDatabaseUtils.prettyPrintXML(getNewbornRegister(processedDatasets[keys[240]], 0).RegistroXML)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parseEpicrisis.parseGPCA_and_fum(getNewbornRegister(processedDatasets[c], 0).RegistroXML.lower())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import parseMeasurementsByDay\n",
-    "importlib.reload(parseMeasurementsByDay)\n",
-    "importlib.reload(parsingDatabaseUtils)\n",
-    "measurements = {}\n",
-    "measurementsControlsPrenatal = {}\n",
-    "\n",
-    "def dateDifferenceDays(d1, d2):\n",
-    "    p1 = parsingDatabaseUtils.parseDate(d1, ''datetime) if isinstance(d1, str) else d1\n",
-    "    p2 = parsingDatabaseUtils.parseDate(d2, 'datetime') if isinstance(d2, str) else d2\n",
-    "    return (p1 - p2).days\n",
-    "\n",
-    "def processPrenatalMeasurements(measurementsControlsPrenatal, fum):\n",
-    "    res = {}\n",
-    "    for test, date, value, _ in measurementsControlsPrenatal[c]:\n",
-    "        if test in ['vdrl', 'HB', 'prt']:\n",
-    "            weeks = dateDifferenceDays(date, fum)//7\n",
-    "            if weeks < 0:\n",
-    "                raise ValueError('Inconsistent!')\n",
-    "\n",
-    "            elif weeks <= 20:\n",
-    "                if test == 'vdrl':\n",
-    "                    #no treponemica\n",
-    "                    res['VAR_0112'] = 'A' if not value else 'B'\n",
-    "                    res['VAR_0412'] = weeks # Weeks\n",
-    "\n",
-    "                elif test == 'prt':\n",
-    "                    #treponemica\n",
-    "                    res['VAR_0415'] = 'A' if not value else 'B'\n",
-    "                    res['VAR_0413'] = weeks # Weeks\n",
-    "\n",
-    "                elif test == 'HB':\n",
-    "                    resSIP[c]['VAR_0095'] = value\n",
-    "\n",
-    "            elif weeks > 20 and weeks < 60:\n",
-    "                if test == 'vdrl':\n",
-    "                    res['VAR_0114'] = 'A' if not value else 'B'\n",
-    "                    res['VAR_0419'] = weeks # Weeks\n",
-    "\n",
-    "                elif test == 'prt':\n",
-    "                    res['VAR_0421'] = 'A' if not value else 'B'\n",
-    "                    res['VAR_0420'] = weeks # Weeks\n",
-    "\n",
-    "                elif test == 'HB':\n",
-    "                    res'VAR_0099'] = value\n",
-    "    return res\n",
-    "\n",
-    "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
-    "    measurements[c] = parseMeasurementsByDay.getParaClinicsHospitalisation(p) + parseMeasurementsByDay.getAllVitalSigns(p)\n",
-    "    if p.epicrisis is not None:\n",
-    "        measurementsControlsPrenatal[c] = parseMeasurementsByDay.parseParaclinicsBeforeHospitalisation(p.epicrisis)\n",
-    "        fum = resSIP[c]['VAR_0057']\n",
-    "        \n",
-    "        for test, date, value, _ in measurementsControlsPrenatal[c]:\n",
-    "            if test in ['vdrl', 'HB', 'prt']:\n",
-    "                weeks = dateDifferenceDays(date, fum)//7\n",
-    "                if weeks < 0:\n",
-    "                    raise ValueError('Inconsistent!')\n",
-    "\n",
-    "                elif weeks <= 20:\n",
-    "                    if test == 'vdrl':\n",
-    "                        #no treponemica\n",
-    "                        resSIP[c]['VAR_0112'] = 'A' if not value else 'B'\n",
-    "                        resSIP[c]['VAR_0412'] = weeks # Weeks\n",
-    "\n",
-    "                    elif test == 'prt':\n",
-    "                        #treponemica\n",
-    "                        resSIP[c]['VAR_0415'] = 'A' if not value else 'B'\n",
-    "                        resSIP[c]['VAR_0413'] = weeks # Weeks\n",
-    "\n",
-    "                    elif test == 'HB':\n",
-    "                        resSIP[c]['VAR_0095'] = value\n",
-    "\n",
-    "                elif weeks > 20:\n",
-    "                    if test == 'vdrl':\n",
-    "                        resSIP[c]['VAR_0114'] = 'A' if not value else 'B'\n",
-    "                        resSIP[c]['VAR_0419'] = weeks # Weeks\n",
-    "\n",
-    "                    elif test == 'prt':\n",
-    "                        resSIP[c]['VAR_0421'] = 'A' if not value else 'B'\n",
-    "                        resSIP[c]['VAR_0420'] = weeks # Weeks\n",
-    "\n",
-    "                    elif test == 'HB':\n",
-    "                        resSIP[c]['VAR_0099'] = value\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
-    "    if len(p.registrosRecienNacido) > 1:\n",
-    "        print('Warning! I still cannot handle twins')\n",
-    "        continue\n",
-    "\n",
-    "    res = {}\n",
-    "    dfMeasurements = pandas.DataFrame(data = measurements[c], columns =['Campo', 'Fecha', 'Valor'])\n",
-    "    dfMeasurements.Valor = dfMeasurements.Valor.map(lambda s: s.replace(',', '.') if isinstance(s, str) else s)\n",
-    "    dfMeasurements.Valor = dfMeasurements.Valor.astype(float)\n",
-    "    dfMeasurementsByDate = dfMeasurements.groupby('Fecha')\n",
-    "    for i, d in enumerate(dfMeasurementsByDate.groups):\n",
-    "        dfValues =dfMeasurementsByDate.get_group(d).groupby('Campo')['Valor'].agg(['median', 'max', 'min'])\n",
-    "        res['day_%d' % i] = d\n",
-    "        for var, row in dfValues.iterrows():\n",
-    "            res[var + '_median_day_%d' % i] = row.median()\n",
-    "            res[var + '_max_day_%d' % i] = row.max()\n",
-    "            res[var + '_min_day_%d' % i] = row.min()\n",
-    "    resSIP[c].update(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from parsingData import parseDiagnosis\n",
-    "from parsingData import parseInterventions, parseMedicaments, parseWithDictionary\n",
-    "\n",
-    "importlib.reload(parseDiagnosis)\n",
-    "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
-    "    if len(p.registrosRecienNacido) > 1:\n",
-    "        print('Warning! I still cannot handle twins')\n",
-    "        continue\n",
-    "    s = getAllDiagnosis(p.epicrisis)\n",
-    "    s = [parsingDatabaseUtils.remove_diacritics(pars.unescape(ss)) for ss in s]\n",
-    "    resSIP[c].update(parseWithDictionary.parseWithDictionary(s, parseDiagnosis.actionsDiagnosis))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from parsingData import parseInterventions, parseMedicaments, parseWithDictionary\n",
-    "importlib.reload(parseMedicaments)\n",
-    "importlib.reload(parseInterventions)\n",
-    "\n",
-    "#Parse medicaments and interventions\n",
-    "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
-    "    if len(p.registrosRecienNacido) > 1:\n",
-    "        print('Warning! I still cannot handle twins')\n",
-    "        continue\n",
-    "    m, i = getMedicamentsInterventionsFromEpicrisis(p.epicrisis)\n",
-    "    for k, v in m.items():\n",
-    "        v = [vv[0] for vv in v]\n",
-    "        resSIP[c].update(parseWithDictionary.parseWithDictionary(v, parseMedicaments.actionMedicament))\n",
-    "        \n",
-    "    for k, v in i.items():\n",
-    "        v = [vv[0] for vv in v]\n",
-    "        resSIP[c].update(parseWithDictionary.parseWithDictionary(v, parseInterventions.actionIntervention))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfResSIP = pandas.DataFrame.from_dict(resSIP, orient = 'index')\n",
-    "\n",
-    "#Quality control\n",
-    "n = len(dfResSIP)\n",
-    "for c in dfResSIP.columns:\n",
-    "    if sum(dfResSIP[c] != dfResSIP[c])/n > .01 and not c.startswith('error'):\n",
-    "        print(c, sum(dfResSIP[c] != dfResSIP[c])/n )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfResSIP = pandas.DataFrame.from_dict(resSIP, orient = 'index')\n",
-    "\n",
-    "#Add SIP information\n",
-    "placeId = '806001061-8'\n",
-    "placeId = addZeros(placeId, 20)\n",
-    "dfResSIP['ID01'] = placeId + dfResSIP['VAR_0019'].map(lambda s: addZeros(s,20))  \\\n",
-    "                                          + dfResSIP['VAR_0040'].map(lambda s: toInt(s, 2)) + \\\n",
-    "                                        dfResSIP['VAR_0286'].map(toInt)\n",
-    "dfResSIP['VAR_0198'] = df['VAR_0198'].map(lambda s: str(int(s)) if s == s and s else s)\n",
-    "dfResSIP['VERSION'] = '4.1.2'\n",
-    "dfResSIP['FECHA'] = datetime.datetime.now().strftime(\"%Y-%m-%d\")\n",
-    "dfResSIP['HORA'] = datetime.datetime.now().strftime(\"%H:%M:%S\")\n",
-    "dfResSIP['USUARIO'] = 'CMRC-AUTO'\n",
-    "\n",
-    "dfResSIP.to_csv('Output/results.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfResSIP.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfNamesVars = pandas.read_excel('parsingData/variables_sip.xlsx')\n",
-    "renameDict = {k : v for  k, v in zip(dfNamesVars['Unnamed: 2'].values, dfNamesVars['Unnamed: 3'].values)}\n",
-    "\n",
-    "dfResSIP.columns = dfResSIP.columns.map(lambda s: s if s not in renameDict else renameDict[s])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "groupedBy = dfNamesVars.groupby('Unnamed: 2')\n",
-    "for g in groupedBy.groups:\n",
-    "    if len(groupedBy.get_group(g)) == 1 or renameDict[g] not in dfResSIP:\n",
-    "        continue\n",
-    "    colname = renameDict[g]\n",
-    "    for (_, r) in groupedBy.get_group(g)[['Unnamed: 4', 'Unnamed: 5']].iterrows():\n",
-    "        option = r['Unnamed: 4']\n",
-    "        value = r['Unnamed: 5']\n",
-    "        dfResSIP.loc[dfResSIP[colname] == option, colname] = value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfResSIP.to_csv('Output/resultsPrettyName.csv')"
+    "resDF.to_csv('Data/results1.csv')"
    ]
   },
   {
