Added parsing of gestational age, and verify dates parsed from echography.

--- a/compareAutomaticManual.ipynb
+++ b/compareAutomaticManual.ipynb
@@ -167,8 +167,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "manual = nivelN1.loc[automatic2manual]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "automatic.loc[manual.loc[manual['VAR_0371'] == 'B'].ID01]['VAR_0282'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "manual.loc[manual['VAR_0371'] == 'B','VAR_0282'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Normalize the  dates so that they can be compared\n",
+    "import caseTransformer\n",
+    "def parseDateManual(s):\n",
+    "    if s != s or '-' in s:\n",
+    "        return s\n",
+    "    d = datetime.datetime.strptime(s, '%m/%d/%y %H:%M:%S')\n",
+    "    return ('%d-%02d-%02d' % (d.year,d.month, d.day))\n",
+    "\n",
+    "for d in caseTransformer.dateVars:\n",
+    "    nivelN1[d] = nivelN1[d].map(parseDateManual)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dfNamesVars = pandas.read_excel('parsingData/variables_sip.xlsx')\n",
-    "renameDict = {k : (k + ' =' + v) for  k, v in zip(dfNamesVars['Unnamed: 2'].values, dfNamesVars['Unnamed: 3'].values)}\n",
+    "renameDict = {k : (k + ' = ' + v) for  k, v in zip(dfNamesVars['Unnamed: 2'].values, dfNamesVars['Unnamed: 3'].values)}\n",
     "renameDict['VAR_0189'] = 'Corticoides / semana de inicio'\n",
     "groupedBy = dfNamesVars.groupby('Unnamed: 2')\n",
     "def renameDatabaseSIP(df):\n",
@@ -192,26 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nivelN1[nivelN1[renameDict['VAR_0031']] != 'no'][renameDict['VAR_0019']].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i, val in nivelN1.loc[nivelN1[renameDict['VAR_0023']]=='VEN19715913'].items():\n",
-    "    print(i, val.iloc[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "renameDict['VAR_0283']"
+    "consistent"
    ]
   },
   {
@@ -230,7 +256,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nivelN1 = nivelN1.loc[~nivelN1.index.duplicated(keep='first')]"
+    "for i, k in enumerate(automatic2manual):\n",
+    "    break\n",
+    "automatic.loc[k, 'VAR_0019=']"
    ]
   },
   {
@@ -239,17 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datetime.datetime.strptime('02/20/19', '%m/%d/%y')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parseDateManual(s):\n",
-    "    datetime.datetime.strftime('%m/%d/%y %H:%M:%S')"
+    "automatic.loc[automatic.vdrl_min_prenatalControl_24==automatic.vdrl_min_prenatalControl_24]"
    ]
   },
   {
@@ -264,6 +282,14 @@
     "    for c in commonCols:\n",
     "        if automatic.loc[k, c] != nivelN1.loc[k, c]:\n",
     "            print('VAR %s : auto= %s  , manual= %s' % (c, automatic.loc[k, c], nivelN1.loc[k, c]))\n",
+    "    print('====\\n\\n')\n",
+    "    for c in filter(lambda c: c not in commonCols, nivelN1.columns):\n",
+    "        print('VAR %s : manual= %s' % (c,  nivelN1.loc[k, c]))\n",
+    "        \n",
+    "    print('====\\n\\n')\n",
+    "    for c in filter(lambda c: c not in commonCols and c.startswith('VAR'), automatic.columns):\n",
+    "        print('VAR %s : manual= %s' % (c,  automatic.loc[k, c]))\n",
+    "\n",
     "    if i == 3:\n",
     "        break"
    ]
