--- a/databaseTransformer.ipynb
+++ b/databaseTransformer.ipynb
@@ -388,7 +388,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resSIP = {}\n"
+    "resSIP = {}\n",
+    "echoLines= {}"
    ]
   },
   {
@@ -397,11 +398,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Process\n",
+    "\n",
     "for c, d in tqdm.notebook.tqdm(processedDatasets.items()):\n",
     "    #if c in resSIP or c != 'AD324070':\n",
     "    #    continue\n",
     "    cT = caseTransformer.CaseTransformer(data = d)    \n",
-    "    resSIP[c] = cT.processAll()"
+    "    resSIP[c],  echoLines[c]= cT.processAll()\n"
    ]
   },
   {
@@ -410,7 +413,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resSIP['AD324070']"
+    "errors = []\n",
+    "errorsAvoidable = []\n",
+    "for c in processedDatasets:\n",
+    "    if echoLines[c] or  resSIP[c].get('VAR_0057','') not in ['07/06/1954', '']:\n",
+    "        continue\n",
+    "    if 'incorrect_echo' in resSIP[c]:\n",
+    "        errorsAvoidable.append(c)\n",
+    "    errors.append(c)\n",
+    "print(len(errors), len(errorsAvoidable))"
    ]
   },
   {
@@ -419,7 +430,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp(processedDatasets['AD323556'].epicrisis.RegistroXML)"
+    "egsByEcho = {}\n",
+    "for c in processedDatasets:\n",
+    "    dBirth = parsingDatabaseUtils.parseDate(resSIP[c].get('VAR_0284'),'datetime')\n",
+    "    EGDays = 0\n",
+    "    if resSIP[c].get('VAR_0057','') not in ['07/06/1954', '']:\n",
+    "        dateFUM = parsingDatabaseUtils.parseDate(resSIP[c].get('VAR_0057'), 'datetime')\n",
+    "        EGDays = (dBirth - dateFUM).days\n",
+    "    elif echoLines[c]:\n",
+    "        egs = []\n",
+    "        for d, eg in echoLines[c].items():\n",
+    "            try:\n",
+    "                d = parsingDatabaseUtils.parseDate(d, 'datetime')\n",
+    "                EG = (dBirth - d).days + float(eg) *7 \n",
+    "                egs.append(EG)\n",
+    "            except:\n",
+    "                pass\n",
+    "        egsByEcho[c] = egs\n",
+    "        EGDays = np.median(egs)        \n",
+    "        \n",
+    "    if EGDays:     \n",
+    "        resSIP[c]['VAR_0198'] = EGDays//7\n",
+    "        resSIP[c]['VAR_0199'] = EGDays%7\n"
    ]
   },
   {
@@ -428,7 +460,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp(processedDatasets['AD324518'].getNewbornRegister(0).RegistroXML)"
+    "errors = []\n",
+    "for c,v in resSIP.items():\n",
+    "    if 'VAR_0198' not in v:\n",
+    "        errors.append(c)\n",
+    "print(len(errors))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "echoLinesFilt = list(filter(lambda s: s, echoLines.values()))\n",
+    "len(echoLinesFilt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dead = ['AD332737', 'AD328745', 'AD329407', 'AD333575', 'AD337298',\n",
+    "       'AD342790', 'AD344552', 'AD325267', 'AD347333', 'AD348308',\n",
+    "       'AD347707', 'AD347283', 'AD347201', 'AD347068', 'AD335797',\n",
+    "       'AD334130', 'AD331887', 'AD348926', 'AD349064', 'AD349527',\n",
+    "       'AD349551', 'AD349784', 'AD351643', 'AD350591', 'AD350887',\n",
+    "       'AD350768', 'AD354417', 'AD356504', 'AD355652', 'AD359734']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "caso = dead[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rnborn = registros.loc[registros.CodigoRegistro == 165]\n",
+    "l1, l2, l3 = [], [], []\n",
+    "for _, r in  rnborn.iterrows():\n",
+    "    et = ET.fromstring(r.RegistroXML)\n",
+    "    d1 = parsingDatabaseUtils.findInXML('InputText_Calsificacion', et)\n",
+    "    d2 = parsingDatabaseUtils.findInXML('TexTarea_AtencionNeonatalReanimacion', et)\n",
+    "    d3 = parsingDatabaseUtils.findInXML('InputText_Presentacion', et)\n",
+    "    l1.append(d1)\n",
+    "    l2.append(d2)\n",
+    "    l3.append(d3)"
    ]
   },
   {
@@ -438,6 +525,60 @@
    "outputs": [],
    "source": [
     "resDF = pandas.DataFrame.from_dict(resSIP, orient = 'index')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum(resDF['incorrect_echo'] == resDF['incorrect_echo'] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resDF.columns.map(lambda c: 'VAR' in str(c) or c in ['FECHA', 'HORA', 'VERSION', 'USUARIO', 'ID01'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resDF2 = resDF[resDF.columns[resDF.columns.map(lambda c: 'VAR' in str(c) or c in ['FECHA', 'HORA', 'VERSION', 'USUARIO', 'ID01'])]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "varsDone = {}\n",
+    "dfNamesVars = pandas.read_excel('parsingData/variables_sip.xlsx')\n",
+    "renameDict = {k : (k + ' = ' + v) for  k, v in zip(dfNamesVars['Unnamed: 2'].values, dfNamesVars['Unnamed: 3'].values)}\n",
+    "renameDict['VAR_0189'] = 'Corticoides / semana de inicio'\n",
+    "\n",
+    "for p in resDF2.columns:\n",
+    "    varsDone[renameDict.get(p,p)] = np.mean(resDF2[p] == resDF2[p])\n",
+    "    print(renameDict.get(p,p), np.mean(resDF2[p] == resDF2[p]))\n",
+    "df =pandas.DataFrame.from_dict(varsDone, orient = 'index', columns = ['Fraccion presente en tabla'])\n",
+    "df.to_excel('estadisticasRecuperacion.xlsx')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processedDatasets['AD365346'].epicrisis"
    ]
   },
   {
